--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,7 +23,7 @@
             </div>
             <div class="login-checkbox">
                 <label>
-                    <input type="checkbox" name="remember">Remember Me
+                    <input type="checkbox" name="_remember_me">Remember Me
                 </label>
                 <label>
                     <a href="{{ path('security_forgotten_password') }}">Forgotten Password?</a>
